trunk/Archive2/05/dd761528d07fa4/output
main.cpp:1:3: error: invalid preprocessing directive #Include
 # Include 
   ^
main.cpp:2:10: error: #include expects "FILENAME" or <FILENAME>
 # include
          ^
main.cpp: In function 'principal':
main.cpp:6:5: error: ISO C forbids nested functions [-Wpedantic]
     const  de char str [ ]  =  "Quantos personagens contém essa corda?" ;
     ^
main.cpp:6:15: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'char'
     const  de char str [ ]  =  "Quantos personagens contém essa corda?" ;
               ^
main.cpp:8:5: error: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
     printf ( "sem caráter nulo:% d \ n " , strlen ( str ) ) ; 
     ^
main.cpp:8:5: warning: incompatible implicit declaration of built-in function 'printf' [enabled by default]
main.cpp:8:14: error: unknown escape sequence: '\040'
     printf ( "sem caráter nulo:% d \ n " , strlen ( str ) ) ; 
              ^
main.cpp:8:5: error: implicit declaration of function 'strlen' [-Wimplicit-function-declaration]
     printf ( "sem caráter nulo:% d \ n " , strlen ( str ) ) ; 
     ^
main.cpp:8:45: warning: incompatible implicit declaration of built-in function 'strlen' [enabled by default]
     printf ( "sem caráter nulo:% d \ n " , strlen ( str ) ) ; 
                                             ^
main.cpp:8:5: warning: format '%d' expects argument of type 'int', but argument 2 has type 'long unsigned int' [-Wformat=]
     printf ( "sem caráter nulo:% d \ n " , strlen ( str ) ) ; 
     ^
main.cpp:9:14: error: unknown escape sequence: '\040'
     printf ( "com caractere nulo:% d \ n " , sizeof ( str ) ) ;
              ^
main.cpp:9:5: warning: format '%d' expects argument of type 'int', but argument 2 has type 'long unsigned int' [-Wformat=]
     printf ( "com caractere nulo:% d \ n " , sizeof ( str ) ) ;
     ^
main.cpp:11:5: error: 'retornar' undeclared (first use in this function)
     retornar  0 ; 
     ^
main.cpp:11:5: note: each undeclared identifier is reported only once for each function it appears in
main.cpp:11:15: error: expected ';' before numeric constant
     retornar  0 ; 
               ^
main.cpp:12:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
