trunk/Archive2/05/dd761528d07fa4/main.cpp
# Include 
# include
 
int principal ( ) 
{ 
    const  de char str [ ]  =  "Quantos personagens contém essa corda?" ;
 
    printf ( "sem caráter nulo:% d \ n " , strlen ( str ) ) ; 
    printf ( "com caractere nulo:% d \ n " , sizeof ( str ) ) ;
 
    retornar  0 ; 
}